--- a/src/scss/functions.scss
+++ b/src/scss/functions.scss
@@ -53,11 +53,16 @@
 }
 
 @function clamp-between($min, $max, $min-width: $breakpoint-md, $max-width: $breakpoint-xl) {
-  $min-width: px-to-rem($min-width);
-  $max-width: px-to-rem($max-width);
+  // Convert line-height values from px to rem if needed
+  $min: if(unit($min)=='px', px-to-rem($min), $min);
+  $max: if(unit($max)=='px', px-to-rem($max), $max);
 
-  $slope: math.div($max - $min, $max-width - $min-width);
-  $intersection: (-$min-width * $slope) + $min;
+  // Convert widths to rem
+  $min-width-rem: strip-unit(px-to-rem($min-width));
+  $max-width-rem: strip-unit(px-to-rem($max-width));
 
-  @return clamp(#{$min}, #{$intersection} + #{$slope * 100vw}, #{$max});
+  $slope: math.div(strip-unit($max) - strip-unit($min), $max-width-rem - $min-width-rem);
+  $intersection: strip-unit($min) - ($min-width-rem * $slope);
+
+  @return clamp(#{$min}, calc(#{$intersection}rem + #{$slope * 100}vw), #{$max});
 }
